# weather-rs

./: .build.yml  Cargo.toml  azure-pipelines.yml
src/: app.rs  lib.rs  main.rs
