[package]
name = "weather-rs"
version = "0.1.0"
authors = ["Matthew Klein <mklein994@gmail.com>"]

[dependencies]
clap = { version = "2.32.0", features = ["wrap_help"] }
dotenv = "0.14.0"
reqwest = "0.9.4"
serde_json = "1.0.32"

[dependencies.darksky]
# version = ">0.8.1"
features = ["reqwest"]
git = "https://github.com/rusty-crates/darksky.rs"
# TODO: change this to the latest stable version > 0.8.1, which includes the
# necessary version bump to openssl.
rev = "12685a4e"
default-features = false
